--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -8,6 +8,7 @@
 <a href="/logout">se déconnecter</a>
 
 
+<a href="/createjob">ajouter un job present/passe sur ma page</a>
 <form action="/jobsearch" method="post">
 <input type="text" name="job" placeholder="nom d'un job"/>
 <input type="text" name="place" placeholder="nom d'un lieu, d'une ville"/>
