--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -9,10 +9,13 @@
 
 
 <a href="/createjob">ajouter un job present/passe sur ma page</a>
+<div>
+<h6>cherche 1 job</h6>
 <form action="/jobsearch" method="post">
-<input type="text" name="job" placeholder="nom d'un job"/>
-<input type="text" name="place" placeholder="nom d'un lieu, d'une ville"/>
+<input type="text" name="job" placeholder="nom d'un job" style="min-width:200px;height:50px;"/>
+<input type="text" name="place" placeholder="nom d'un lieu, d'une ville" style="min-width:200px;height:50px;"/>
 </form>
+</div>
 
 
  <h1>Your lucky number is {{ number }}</h1>
