--- a/templates/job/form.html.twig
+++ b/templates/job/form.html.twig
@@ -14,7 +14,12 @@
 
 </div>
     <div>
-<label for="lieu">lieu du job (entreprise)</label>
+<label for="company">entreprise du job (entreprise)</label>
+<input type="text" id="company"  name="company" />
+
+</div>
+    <div>
+<label for="lieu">lieu du job (adresse)</label>
 <input type="text" id="lieu"  name="lieu" />
 
 </div>
