--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -14,11 +14,23 @@
 <form action="/jobsearch" method="post">
 <input type="text" name="job" placeholder="nom d'un job" style="min-width:200px;height:50px;"/>
 <input type="text" name="place" placeholder="nom d'un lieu, d'une ville" style="min-width:200px;height:50px;"/>
+<select name="rayon" style="min-width:200px;height:50px;">
+    {% for rayon in rayons %}
+<option value="{{rayon}}">{{rayon}} km</option>
+    {% endfor %}
+</select>
+<input type="submit" name="chercher" value="chercher" style="min-width:200px;height:50px;"/>
 </form>
 </div>
 
 
  <h1>Your lucky number is {{ number }}</h1>
+<h2>vous connaissez peut-être:</h2>
+<ul class="connaitpeutetre">
+    {% for user in users %}
+        <li>{{ user.email|e }}</li>
+    {% endfor %}
+</ul>
 <img src="" id="placephoto" style="height:200px;width:100%;display:none;" />
 <input type="file" id="inputplacephoto" hidden onchange="previewSecondphoto()" />ajouter une image d'un endroit ici<br>
 <table class="cvjobtable" cellspacing="20px">
@@ -53,6 +65,15 @@
       </tr>
     </thead>
     <tbody id="allexperiences">
+{% if jobs|length > 0 %}
+    {% for job in jobs %}
+      <tr>
+        <td>{{ job.dates }}</td>
+        <td>{{ job.name }} ({{ job.company }}, {{ job.place }})</td>
+      </tr>
+    {% endfor %}
+
+{% else %}
       <tr>
         <td>Nov2022-Till Date</td>
         <td>Operations Team Member (Adecco)</td>
@@ -65,6 +86,8 @@
         <td>Apr 2021-May 2022</td>
         <td>Instructor (National Youth Service Corp)</td>
       </tr>
+
+{% endif %}
     </tbody>
   </table>
   <h3>mes competences techniques</h3>
