--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -9,6 +9,7 @@
 
 
 <a href="/createjob">ajouter un job present/passe sur ma page</a>
+<a href="/createjoboffer">ajouter une offre d'emploi</a>
 <div>
 <h6>cherche 1 job</h6>
 <form action="/jobsearch" method="post">
