--- a/templates/joboffer/form.html.twig
+++ b/templates/joboffer/form.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<h1>ajouter un job present/passé</h1>
+<h1>ajouter une offre d'emploi</h1>
 <form method="post">
     <div>
 
