--- a/templates/joboffer/form.html.twig
+++ b/templates/joboffer/form.html.twig
@@ -57,10 +57,7 @@
                             <!-- Ici s'affichera la carte -->
                                 </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
-<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-<script src="/js/mymap.js" type="text/javascript"></script>
 
 
 {% else %}
@@ -68,4 +65,10 @@
 tu n'es pas connécté.e <a href="/">retour à l'accueil</a>
 </p>
 {% endif %}
+{% endblock %}
+{% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+<script src="/js/mymap.js" type="text/javascript"></script>
 {% endblock %}
