--- a/public/css/mymap.css
+++ b/public/css/mymap.css
@@ -7,3 +7,12 @@ width:100%;
 height:400px;
 }
 
+
+.jobdescription{
+overflow: hidden;
+text-overflow: ellipsis;
+-webkit-line-clamp: 3;
+display: -webkit-box;
+-webkit-box-orient: vertical;
+}
+
