--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -12,7 +12,7 @@
 <a href="/createjoboffer">ajouter une offre d'emploi</a>
 <div>
 <h6>cherche 1 job</h6>
-<form action="/jobsearch" method="post">
+<form action="/chercheroffredemploi" method="get">
 <input type="text" name="job" placeholder="nom d'un job" style="min-width:200px;height:50px;"/>
 <input type="text" name="place" placeholder="nom d'un lieu, d'une ville" style="min-width:200px;height:50px;"/>
 <select name="rayon" style="min-width:200px;height:50px;">
@@ -48,7 +48,7 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">user no{{user.id}} </h5>
+        <h5 class="card-title">user no </h5>
         <p class="card-text">{{user.email}}</p>
       </div>
     </div>
